# spec-kit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  release_notes.md
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: docfx.json  installation.md  local-development.md  quickstart.md
scripts/bash/: update-agent-context.sh
scripts/powershell/: update-agent-context.ps1
src/bobkit/: __init__.py
src/specify_cli/: __init__.py
